--- a/UserSignUp/views/index.pug
+++ b/UserSignUp/views/index.pug
@@ -1,36 +1,10 @@
-extends layout
-
-block content
-  h1= title
-  .container
-    p Welcome to #{title}
-    .card.txt-white.bg-primary
-      .card-header.bg-primary.text-white Login
-      .car-body.container.bg-light
-        form.form(action="/users/login",method="post")
-          br
-          .form-group
-            label.text-primary Name
-            input.form-control(type="text", name="name")
-          .form-group
-            label.text-primary Password
-            input.form-control(type="text", name="password")
-          input.btn.btn-primary.btn-block(type="submit", value="Login")
-          br
-    br
-    br
-    .card.txt-white.bg-primary
-          .card-header.bg-primary.text-white SignUp
-          .car-body.container.bg-light
-            form.form(action="/users/signup",method="post")
-              br
-              .form-group
-                label.text-primary Name
-                input.form-control(type="text", name="name")
-              .form-group
-                label.text-primary Password
-                input.form-control(type="text", name="password")
-              input.btn.btn-primary.btn-block(type="submit", value="SignUp  ")
-              br
-        
+doctype html
+html
+  head
+    title= title
+    link(rel="stylesheet", href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css",integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm", crossorigin="anonymous")
+    link(rel='stylesheet', href='/stylesheets/style.css')
+  body
+     my-app Loading... 
+     script(src="/js/app/bundle.js")
 
