--- a/UserSignUp/assets/app/login/login.component.html
+++ b/UserSignUp/assets/app/login/login.component.html
@@ -1,21 +1,35 @@
-<header class="row">
-  <div class="col-12 ">
-    <ul class="nav nav-tabs justify-content-end" role="tablist">
-        <li class="nav-item"><a class="nav-link " [routerLink]="[ '/login']"  routerLinkActive="active">Login</a></li>
-        <li class="nav-item"><a class="nav-link" [routerLink]="[ '/signup']"  routerLinkActive="active">Signup</a></li>
-    </ul>
+<div class="col-md-5 mx-auto">
+  <div class="card">
+    <div class="card-header">
+      <ul class="nav nav-tabs nav-fill card-header-tabs ">
+        <li class="nav-item">
+          <a class="nav-link " [routerLink]="[ '/login']" routerLinkActive="active">Login</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="[ '/signup']" routerLinkActive="active">Signup</a>
+        </li>
+      </ul>
+    </div>
+    <div class="card-body">
+      <div class="container py-1">
+        <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+          <div class="form-group">
+            <label for="email">Email address</label>
+            <input type="email" class="form-control" id="email" placeholder="Enter email" formControlName="email" [ngClass]="{'is-invalid': isFieldInvalid(formControl.email)}">
+            <div class="invalid-feedback" *ngIf="{'is-invalid': isFieldInvalid(formControl.email)}">
+              Please enter valid Email Ex: ash@gmail.com
+            </div>
+          </div>
+          <div class="form-group">
+            <label for="password">Password</label>
+            <input type="password" class="form-control" id="password" placeholder="Password" formControlName="password" [ngClass]="{'is-invalid': isFieldInvalid(formControl.password)}">
+            <div class="invalid-feedback" *ngIf="{'is-invalid': isFieldInvalid(formControl.password)}">
+              Password should be of minimum 6 character
+            </div>
+          </div>
+          <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+      </div>
+    </div>
   </div>
-</header>
-<div class="container col-md-8 py-5">
-  <form>
-    <div class="form-group">
-      <label for="exampleInputEmail1">Email address</label>
-      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-    </div>
-    <div class="form-group">
-      <label for="exampleInputPassword1">Password</label>
-      <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-    </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
-  </form>
 </div>
