--- a/UserSignUp/assets/app/signup/signup.component.html
+++ b/UserSignUp/assets/app/signup/signup.component.html
@@ -1,36 +1,44 @@
-<header class="row">
-    <div class="col-12 ">
-        <ul class="nav nav-tabs justify-content-end" role="tablist">
-            <li class="nav-item"><a class="nav-link " [routerLink]="[ '/login']"  routerLinkActive="active">Login</a></li>
-            <li class="nav-item"><a class="nav-link" [routerLink]="[ '/signup']"  routerLinkActive="active">Signup</a></li>
-        </ul>
+<div class="col-md-5 mx-auto">
+    <div class="card">
+        <div class="card-header">
+                <ul class="nav nav-tabs nav-fill card-header-tabs ">
+                    <li class="nav-item">
+                        <a class="nav-link " [routerLink]="[ '/login']" routerLinkActive="active">Login</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" [routerLink]="[ '/signup']" routerLinkActive="active">Signup</a>
+                    </li>
+                </ul>
+        </div>
+        <div class="card-body">
+            <div class="container py-1">
+                <form [formGroup]="signUpForm" (ngSubmit)="onSubmit()">
+                    <div class="form-group">
+                        <label for="name">Name</label>
+                        <input type="text" formControlName="name" class="form-control" id="name" name="name" placeholder="Enter Name"  [ngClass]="{'is-invalid': isFieldInvalid(formControl.name)}">
+                    </div>
+                    <div class="form-group">
+                        <label for="email">Email address</label>
+                        <input type="email" formControlName="email" class="form-control" id="email" name="email" placeholder="Enter email"  [ngClass]="{'is-invalid': isFieldInvalid(formControl.email)}">
+                    </div>
+                    <div class="form-group">
+                        <label for="password">Password</label>
+                        <input type="password" formControlName="password" class="form-control" id="password" name="password" placeholder="Password"  [ngClass]="{'is-invalid': isFieldInvalid(formControl.password)}">
+                    </div>
+                    <div class="form-group">
+                        <label for="gender">Gender</label><br>
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" formControlName="gender" type="radio" name="gender" id="male" value="Male" checked  [ngClass]="{'is-invalid': isFieldInvalid(formControl.gender)}">
+                            <label class="form-check-label" for="male">Male</label>
+                        </div>
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" formControlName="gender" type="radio" name="gender" id="female" value="Female"  [ngClass]="{'is-invalid': isFieldInvalid(formControl.gender)}">
+                            <label class="form-check-label" for="female">Female</label>
+                        </div>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                </form>
+            </div>
+        </div>
     </div>
-</header>
-<div class="container col-md-8 py-5">
-    <form>
-        <div class="form-group">
-            <label for="name">Name</label>
-            <input type="text" class="form-control" id="name" name="name" placeholder="Enter Name">
-        </div>
-        <div class="form-group">
-            <label for="email">Email address</label>
-            <input type="email" class="form-control" id="email" name="email" placeholder="Enter email">
-        </div>
-        <div class="form-group">
-            <label for="password">Password</label>
-            <input type="password" class="form-control" id="password" name="password" placeholder="Password">
-        </div>
-        <div class="form-group">
-            <label for="gender">Gender</label><br>
-            <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" name="male" id="male" value="Male">
-                <label class="form-check-label" for="male">Male</label>
-            </div>
-            <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" name="female" id="female" value="Female">
-                <label class="form-check-label" for="female">Female</label>
-            </div>
-        </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
-    </form>
 </div>
