added admin page

--- a/UserSignUp/assets/app/admin/admin.component.html
+++ b/UserSignUp/assets/app/admin/admin.component.html
@@ -1,1 +1,25 @@
-<h1>Welcome ADMIN</h1>
+<div class="container-fluid h-100">
+    <div class="row">
+        <div class="col-2 px-1 bg-dark " id="sticky-sidebar">
+            <div class="py-2 sticky-top">
+                <div class="nav flex-column">
+                    <div class="card  bg-dark border-0">
+                        <img class="card-img-top img-thumbnail rounded-circle h-auto" src="http://icons-for-free.com/free-icons/png/512/2203549.png" alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This content is a little bit longer.</p>
+                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                        </div>
+                    </div>
+                    <a href="" class="nav-link">Sidebar</a>
+                    <a href="" class="nav-link">Link</a>
+                    <a href="" class="nav-link">Link</a>
+                    <a href="" class="nav-link">Link</a>
+                    <a href="" class="nav-link">Link</a>
+                    <a href="" class="nav-link">Link</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
