--- a/UserSignUp/assets/app/login/login.component.html
+++ b/UserSignUp/assets/app/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="col-md-5 mx-auto">
+<div class="col-md-5 mx-auto my-5">
   <div class="card">
     <div class="card-header">
       <ul class="nav nav-tabs nav-fill card-header-tabs ">
