--- a/UserSignUp/assets/app/admin/welcome/welcome.component.html
+++ b/UserSignUp/assets/app/admin/welcome/welcome.component.html
@@ -1,4 +1,3 @@
-<div class="card bg-primary">
-    <div class="card-header">Welcome Admin</div>
-    <div class="card-body bg-light">No new Messages</div>
+<div class="container">
+    <h1>Welcome</h1>
 </div>
