Dialog Service Added

--- a/UserSignUp/assets/app/admin/admin.component.css
+++ b/UserSignUp/assets/app/admin/admin.component.css
@@ -1,110 +1,7 @@
-
-p {
-    font-size: 1.1em;
-    font-weight: 300;
-    line-height: 1.7em;
-    color: #999;
+#sidebar{
+    height: 100vh;
+    overflow: auto;
 }
-
-a, a:hover, a:focus {
-    color: #b5c4cb;
-    text-decoration: none;
-    transition: all 0.3s;
+#handPointer{
+    cursor: pointer;
 }
-
-#sidebar .sidebar-header {
-    padding: 20px;
-    background: #1e282c;
-}
-
-#sidebar ul.components {
-    padding: 20px 0;
-}
-
-#sidebar ul p {
-    color: #fff;
-    padding: 10px;
-}
-
-#sidebar ul li a {
-    padding: 10px;
-    font-size: 1.1em;
-    display: block;
-}
-#sidebar ul li a:hover {
-    color: #f0f0f0;
-    background: #1e282c;
-}
-
-#sidebar ul li.active > a, a[aria-expanded="true"] {
-    color: #f0f0f0;
-    background: #1e282c;
-}
-ul ul a {
-    font-size: 0.9em !important;
-    padding-left: 30px !important;
-    background: #1e282c;
-}
-
-.wrapper {
-    display: flex;
-    align-items: stretch;
-    width: 100%;
-}
-
-#sidebar {
-    width: 250px;
-    position: fixed;
-    top: 0;
-    left: 0;
-    background: #222d32;
-    color: #fff;
-    transition: all 0.3s;
-}
-
-#content{
-    margin-left: 250px;
-}
-
-#sidebar.active {
-    margin-left: -250px;
-}
-a[data-toggle="collapse"] {
-    position: relative;
-}
-
-.dropdown-toggle::after {
-    display: block;
-    position: absolute;
-    top: 50%;
-    right: 20px;
-    transform: translateY(-50%);
-}
-
-.sidebar-menus{    
-    height: 80vh;
-    overflow-y: auto;
-}
-
-.sidebar-menus::-webkit-scrollbar {
-	width: 17px;
-	background-color: rgba(0, 0, 0, 0);
-}
-
-.sidebar-menus::-webkit-scrollbar-track {
-    border-radius: 10px;
-    background: rgba(255,255,255,0.1);
-  }
-  
-  .sidebar-menus::-webkit-scrollbar-thumb {
-    border-radius: 10px;
-    background: rgba(98, 117, 199, 0.7);
-  }
-  
-  .sidebar-menus::-webkit-scrollbar-thumb:hover {
-    background: rgba(98, 117, 199,0.9);
-  }
-  
-  .sidebar-menus::-webkit-scrollbar-thumb:active {
-    background:  rgba(98, 117, 199,1);
-  }
