--- a/UserSignUp/assets/app/user/user.component.html
+++ b/UserSignUp/assets/app/user/user.component.html
@@ -1,1 +1,31 @@
-<h1>Welcome IDIOT!</h1>
+<div class="row mx-0">
+    <div class="col-md-2 bg-white side-nav px-0 border-right bg-dark">
+        <!-- Sidebar -->
+        <nav id="sidebar">
+            <div class="card-header">
+                <h3>User Sidebar</h3>
+            </div>
+            <ul class="list-unstyled components">
+                <p class="card-body">Welcome {{user.name}}</p>
+                <div class="list-group list-group-flush" id="list-tab" role="tablist">
+                    <ng-container *ngFor="let menu of menus">
+                        <a class="list-group-item list-group-item-action  border-0" data-toggle="list" href="#list-home" role="tab" [routerLink]="[ '/user',menu.route ]"
+                            routerLinkActive="active">
+                            {{menu.name}}
+                        </a>
+                    </ng-container>
+                </div>
+            </ul>
+            <ul class="col-md-2 px-0 pb-1 mb-0 fixed-bottom border-right list-unstyled components">
+                <div class="list-group list-group-flush" id="list-tab" role="tablist">
+                    <button type="button" id="handPointer" class="list-group-item list-group-item-action border-0" (click)='logOut()'>Log
+                        Out
+                    </button>
+                </div>
+            </ul>
+        </nav>
+    </div>
+    <div id="content" class="col-md-10">
+        <router-outlet></router-outlet>
+    </div>
+</div>
