--- a/UserSignUp/assets/app/login/login.component.html
+++ b/UserSignUp/assets/app/login/login.component.html
@@ -12,23 +12,19 @@
     </div>
     <div class="card-body">
       <div class="container py-1">
-        <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-          <div class="form-group">
-            <label for="email">Email address</label>
-            <input type="email" class="form-control" id="email" placeholder="Enter email" formControlName="email" [ngClass]="{'is-invalid': isFieldInvalid(formControl.email)}">
-            <div class="invalid-feedback" *ngIf="{'is-invalid': isFieldInvalid(formControl.email)}">
-              Please enter valid Email Ex: ash@gmail.com
-            </div>
+        <div [formGroup]="loginForm" >
+            <mat-form-field class="col-12 px-0">
+              <input matInput type="email" id="email" placeholder="Enter email" formControlName="email">
+              <mat-hint>Ex: ash@gmail.com</mat-hint>
+              <mat-error *ngIf="isFieldInvalid(formControl.email)">Please enter valid Email </mat-error>
+            </mat-form-field>
+            <mat-form-field class="col-12 px-0">
+              <input matInput type="password" id="password" placeholder="Password" formControlName="password">
+              <mat-hint>Password should be of minimum 6 character</mat-hint>
+              <mat-error *ngIf="isFieldInvalid(formControl.password)">Please enter valid Password</mat-error>
+            </mat-form-field>
+            <button class="mt-3" (click)="onSubmit()" mat-raised-button color="primary">Login</button>
           </div>
-          <div class="form-group">
-            <label for="password">Password</label>
-            <input type="password" class="form-control" id="password" placeholder="Password" formControlName="password" [ngClass]="{'is-invalid': isFieldInvalid(formControl.password)}">
-            <div class="invalid-feedback" *ngIf="{'is-invalid': isFieldInvalid(formControl.password)}">
-              Password should be of minimum 6 character
-            </div>
-          </div>
-          <button type="submit" class="btn btn-primary">Submit</button>
-        </form>
       </div>
     </div>
   </div>
