--- a/UserSignUp/assets/app/login/login.component.html
+++ b/UserSignUp/assets/app/login/login.component.html
@@ -1,31 +1,49 @@
-<div class="col-md-5 mx-auto my-5">
-  <div class="card">
-    <div class="card-header">
-      <ul class="nav nav-tabs nav-fill card-header-tabs ">
-        <li class="nav-item">
-          <a class="nav-link " [routerLink]="[ '/login']" routerLinkActive="active">Login</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" [routerLink]="[ '/signup']" routerLinkActive="active">Signup</a>
-        </li>
-      </ul>
-    </div>
-    <div class="card-body">
-      <div class="container py-1">
-        <div [formGroup]="loginForm" >
-            <mat-form-field class="col-12 px-0">
-              <input matInput type="email" id="email" placeholder="Enter email" formControlName="email">
-              <mat-hint>Ex: ash@gmail.com</mat-hint>
-              <mat-error *ngIf="isFieldInvalid(formControl.email)">Please enter valid Email </mat-error>
-            </mat-form-field>
-            <mat-form-field class="col-12 px-0">
-              <input matInput type="password" id="password" placeholder="Password" formControlName="password">
-              <mat-hint>Password should be of minimum 6 character</mat-hint>
-              <mat-error *ngIf="isFieldInvalid(formControl.password)">Please enter valid Password</mat-error>
-            </mat-form-field>
-            <button class="mt-3" (click)="onSubmit()" mat-raised-button color="primary">Login</button>
-          </div>
+<mat-card class="col-md-4 mx-auto my-5 pb-2 ">
+  <mat-tab-group mat-card-image [color]="primary" [color]="primary" [backgroundColor]="primary" mat-stretch-tabs dynamicHeight [selectedIndex]="getIndex()">
+    <mat-tab label="Login">
+      <div [formGroup]="loginForm" class="p-3">
+        <mat-form-field class="col-12">
+          <input matInput type="email" placeholder="Enter email" formControlName="email">
+          <mat-hint>Ex: ash@gmail.com</mat-hint>
+          <mat-error *ngIf="isFieldInvalid(formControl.email)">Please enter valid Email </mat-error>
+        </mat-form-field>
+        <mat-form-field class="col-12">
+          <input matInput type="password" placeholder="Password" formControlName="password">
+          <mat-hint>Password should be of minimum 6 character</mat-hint>
+          <mat-error *ngIf="isFieldInvalid(formControl.password)">Please enter valid Password</mat-error>
+        </mat-form-field>
+        <div class="col-12 mt-2">
+          <button class="mt-3" (click)="login()" mat-raised-button color="primary">Login</button>
+        </div>
       </div>
-    </div>
-  </div>
-</div>
+    </mat-tab>
+    <mat-tab label="Signup">
+      <div [formGroup]="signUpForm">
+        <mat-form-field class="col-12">
+          <input matInput type="name" placeholder="Enter Name" formControlName="name">
+          <mat-hint>Ex: Nick</mat-hint>
+          <mat-error *ngIf="isFieldInvalid(signUpFormControl.name)">Please enter your Name </mat-error>
+        </mat-form-field>
+        <mat-form-field class="col-12">
+          <input matInput type="email" placeholder="Enter Email" formControlName="email">
+          <mat-hint>Ex: your.name@gmail.com</mat-hint>
+          <mat-error *ngIf="isFieldInvalid(signUpFormControl.email)">Please enter valid Email </mat-error>
+        </mat-form-field>
+        <mat-form-field class="col-12">
+          <input matInput type="password" placeholder="Password" formControlName="password">
+          <mat-hint>Ex: %Rtx566SgI</mat-hint>
+          <mat-error *ngIf="isFieldInvalid(signUpFormControl.password)">Password should be of minimum 6 character</mat-error>
+        </mat-form-field>
+        <div class="col-md-12 pt-2">
+          <mat-radio-group formControlName="gender">
+            <mat-radio-button value="Male" color="primary" checked>Male</mat-radio-button>
+            <mat-radio-button value="Female" color="primary">Female</mat-radio-button>
+          </mat-radio-group>
+        </div>
+        <div class="col-12 mt-1">
+          <button class="mt-3" (click)="signup()" mat-raised-button color="primary">Login</button>
+        </div>
+      </div>
+    </mat-tab>
+  </mat-tab-group>
+</mat-card>
