--- a/UserSignUp/assets/app/login/login.component.html
+++ b/UserSignUp/assets/app/login/login.component.html
@@ -41,7 +41,7 @@
           </mat-radio-group>
         </div>
         <div class="col-12 mt-1">
-          <button class="mt-3" (click)="signup()" mat-raised-button color="primary">Login</button>
+          <button class="mt-3" (click)="signup()" mat-raised-button color="primary">Signup</button>
         </div>
       </div>
     </mat-tab>
